gitops/apps/feedback-dev/backend/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: feedback-ingress
  namespace: feedback-dev
  annotations:
    cert-manager.io/cluster-issuer: "feedback-ca-issuer"
    
spec:
  ingressClassName: nginx
  tls:
    - hosts:
        - feedback-dev.example.com
      secretName: feedback-tls-cert
  rules:
    - host: feedback-dev.example.com
      http:
        paths:
        # This is to route for backend API
        - path: /api
          pathType: Prefix
          backend:
            service:
              name: backend
              port:
                number: 8080
        #This is to route frontend UI
        - path: /
          pathType: Prefix
          backend:
            service:
              name: frontend
              port: 
                number: 80
